[package]
name = "crossfire"
version = "2.0.20"
authors = ["plan <frostyplanet@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/frostyplanet/crossfire-rs"
readme = "README.md"
repository = "https://github.com/frostyplanet/crossfire-rs"
documentation = "https://docs.rs/crossfire"
keywords = ["async", "non-blocking", "lock-free", "channel"]
categories = ["concurrency", "data-structures"]
exclude = ["/ci/*", "/bors.toml"]
description = "channels for async and threads"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
futures = "0.3"
enum_dispatch = "0.3"
parking_lot = "0"
tokio = { version = "1", features = ["time"], optional=true }
async-std = {version = "1", optional=true}

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "rt", "macros"] }
rand = "0.9"
rstest = "0"
captains-log = {version="0.8", features = ["ringfile"] }
log = "0"
atomic-waitgroup = "0"
criterion = { version="0.6", features = ["async_tokio", "csv_output"] }

flume = {version="0.11", features= ["async"] }
kanal = {version="0.1"}

[features]
default = []
tokio = ["dep:tokio"]
async_std = ["dep:async-std"]

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["tokio"]

[[bench]]
name = "crossfire"
harness = false

[[bench]]
name = "crossbeam"
harness = false

[[bench]]
name = "flume"
harness = false

[[bench]]
name = "kanal"
harness = false

[[bench]]
name = "tokio"
harness = false
